Fixing Order and Inventory
